k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: medical-app
spec:
  selector:
    app: mysql-medical
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
