k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medical-frontend-ing
  namespace: medical-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: proyectodouglas.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medical-frontend
            port:
              number: 3000
