k8s/networkpolicy-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mysql
  namespace: medical-app
spec:
  podSelector:
    matchLabels:
      app: mysql-medical
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: medical-backend
      ports:
        - protocol: TCP
          port: 3306
